# app-pyside-ui

./: .gitignore  README.md  README.pt-br.md  __version__.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-nuitka.yaml.old  pdm-test-pypi.yaml.old
_scripts/: compile_resources.py  convert_ui_files.py  pre_build.py  translations.py
app_pyside_ui/: app.py
app_pyside_ui/components/: MainWindow.py
app_pyside_ui/uic/: Ui_MainWindow.py  resources_rc.py
resources/locales/en_US/: br.com.justcode.Qt.en_US.qm  br.com.justcode.Qt.en_US.ts
resources/ui/: MainWindow.ui
src/app_pyside_ui/: app.py
src/app_pyside_ui/components/: MainWindow.py
src/app_pyside_ui/uic/: Ui_MainWindow.py  resources_rc.py
src/resources/locales/en_US/: br.com.justcode.Qt.en_US.qm  br.com.justcode.Qt.en_US.ts
src/resources/ui/: MainWindow.ui
tests/: test_main_window.py
