[tool.poetry]
name = 'app-pyside-ui'
version = '0.1.0'
description = 'Exemplo de aplicativo feito com a linguagem de programação Python, o binding PySide e o framework gráfico Qt (ui).'
authors = ['Renato Cruz <natorsc@gmail.com>']
maintainers = ['Renato Cruz <natorsc@gmail.com>']
readme = ['README.md', 'README.pt-br.md']
license = 'MIT'
repository = 'https://github.com/natorsc/app-pyside-ui'
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.dependencies]
python = '>=3.11,<3.13'
pyside6 = '^6.7.2'

[tool.poetry.group.dev.dependencies]
taskipy = '^1.13.0'
ruff = '^0.5.0'

[tool.poetry.scripts]
app-pyside-ui = 'app_pyside_ui.app:main'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.ruff]
line-length = 79
extend-exclude = ['resources', 'resources_rc.py', 'uic']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
export = 'poetry export --without-hashes -o requirements.txt'
format = 'ruff check . --fix && ruff format .'
lint = 'ruff check . && ruff check . --diff'
lupdate = 'python _scripts/translations.py'
rcc = 'python _scripts/compile_resources.py'
test = 'python -m unittest'
uic = 'python _scripts/convert_ui_files.py'